# bitchchain

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  SECURITY.md  _fix_bench.py  _fix_bench2.py  _fix_config.py  _fix_shutdown.py  _fix_sqlite.py  idea.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  benchmark.py  main.py  orchestrator.py  rpc_server.py
agent/memory/: memory_manager.py
agent/modules/: __init__.py  blockchain_core.py  consensus_engine.py  network_node.py  privacy_layer.py  wallet.py
config/: .env.example  agent_config.yaml
docker/: Dockerfile  docker-compose.yml
tests/: test-scenarios.md  test_agent.py
tools/: hf_model_manager.py  knowledge_updater.py  llm_client.py
