[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitchchain"
version = "0.1.0"
description = "Bitcoin-forked blockchain with hybrid PoW/PoS consensus, Confidential Transactions, and LLM research synthesis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Bitchchain Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "ecdsa>=0.18.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "sentence-transformers>=3.0.0",
    "APScheduler>=3.10.0",
    "aiohttp>=3.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
bitchchain = "agent.main:main"

[tool.setuptools.packages.find]
include = ["agent*", "tools*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
